[package]
name = "tauri-plugin-broadcast"
version = "0.1.1"
authors = ["dduutt"]
description = "Android intent broadcast plugin for Tauri V2"
repository = "https://github.com/dduutt/tauri-plugin-broadcast"
homepage = "https://github.com/dduutt/tauri-plugin-broadcast"
edition = "2021"
rust-version = "1.77.2"
license = "MIT OR Apache-2.0"
keywords = ["tauri", "plugin", "android", "broadcast", "intent"]
categories = ["gui", "os::android-apis"]
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-broadcast"

[dependencies]
tauri = { version = "2.10.3" }
serde = "1.0"
serde_json = "1"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5.4", features = ["build"] }
